--- a/Api/package.json
+++ b/Api/package.json
@@ -1,7 +1,7 @@
 {
   "name": "personal_budget_portfolio_project",
   "version": "1.0.0",
-  "description": "",
+  "description": "RESTful API with Node.js, Express, PosgreSQL, and React",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,9 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "js-yaml": "^4.1.0",
     "morgan": "^1.10.0",
+    "pg": "^8.11.5",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
   },
