--- a/Api/package.json
+++ b/Api/package.json
@@ -1,7 +1,7 @@
 {
   "name": "personal_budget_portfolio_project",
   "version": "1.0.0",
-  "description": "RESTful API with Node.js, Express, PosgreSQL, and React",
+  "description": "RESTful API with Node.js, Express, PosgreSQL, and Angular",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
