--- a/Client/package.json
+++ b/Client/package.json
@@ -9,10 +9,10 @@
     "env-cmd": "^10.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  
   "scripts": {
     "start": "env-cmd -f .env react-scripts start",
     "build": "react-scripts build",
